# retail-crm-integration-service

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/: main.py
src/apps/: routes.py
src/apps/customer/: api.py  dependencies.py  enums.py  schemas.py
src/apps/customer/services/: customer_service.py
src/apps/health/: api.py
src/apps/order/: api.py  dependencies.py  enums.py  schemas.py
src/apps/order/services/: order_service.py
src/core/: schemas.py  server.py  settings.py
src/integrations/retail_crm/: client.py  constants.py  endpoints.py
